--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,11 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0"
+        classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
 
+
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
